Changes made between Gamera File Releases
=========================================

 - all user provided filenames (trining XML files etc) converted
   to unicode to allow for arbitrary filenames

 - new argument 'unique' for graph_color_ccs based on IVAPP 2013 paper

 - node.nodes() in graph API now works

 - option --nowx for setup.py to install without wxPython


Version 3.4.0, Nov 20, 2012
----------------------------

 - GA optimization module rewritten from scratch
     o evolutionary optimization now for selection and weighting implemented
     o replacement of used library (GALib was replaced by EO)
     o optimization process is now highly configurable
     o fitness evaluation is now parallelizable
   (thanks to Tobias Bolten)

 - knncoremodule splitted in header and implementation file

 - feature normalization for noninteractive classifier now works

 - feature selection supported as a better alternative to feature weighting

 - components of individual features can be switsched on or off with
   knn.kNN[Non]Interactive.set_selections_by_feature[s]

 - Point-types can be added

 - new plugins brink_threshold and diagonal_projections (feature)
   (thanks to Andrew Hankinson)

 - new C++ operators in dimension type Point:
   o addition with operator+
   o comparison with operator<
     (this makes no reals sense, but allows Points to be keys in maps)

 - convex_hull could return doublets in the point list


Version 3.3.3, May 15, 2012
----------------------------

 - new plugins min_max_location() and max_empty_rect()

 - Rect can now be a return type of a plugin function

 - ImageType arguments can be optional with "default=NoneDefault"

 - C++ graph API also usable from toolkits

 - fixed a type mismatch in graph API on 64bit bigendian architectures

 - changing feature set in Biollante now works

 - changes in rank() and mean():
    o significantly faster
    o default border_treatment changed to 'reflect',